make registration more prominent, change photo

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
           <a class="nav-item nav-link minicaps data-scroll" href="#guest-list">Guest List</a>
           <a class="nav-item nav-link minicaps data-scroll" href="#registration">Registration</a>
           <a class="nav-item nav-link minicaps data-scroll" href="#faq">FAQ</a>
+          <a class="nav-item p2pu-btn orange data-scroll" href="https://goo.gl/forms/UTowylj4y8wVhJup1">JOIN US</a>
         </ul>
       </div>
     </nav>
@@ -77,12 +78,6 @@
             <li>Co-design new exercises and tools that support learning circles and other related library programs</li>
             <li>Explore and build consensus about the learning circle model, its values, and potential directions for our movement</li>
         </ul>
-        <div class="image">
-          <img src="img/kc-library.jpg" alt="Kansas City Library">
-          <div class="caption">
-            <small>Kansas City Central Library. Photo credit: Jonathan Moreau <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/" class="bold">CC BY-NC-ND 2.0</a></small>
-          </div>
-        </div>
       </div>
     </section>
 
@@ -90,9 +85,16 @@
       <div class="content" data-aos="slide-up">
         <h2>Location and Details</h2>
 
+        <div class="image">
+          <img src="img/kc-library.jpg" alt="Kansas City Library">
+          <div class="caption">
+            <small>Kansas City Central Library. Photo credit: Jonathan Moreau <a href="https://creativecommons.org/licenses/by-nc-nd/2.0/" class="bold">CC BY-NC-ND 2.0</a></small>
+          </div>
+        </div>
+
         <p>The gathering will take place at the Helzberg Auditorium on the 5th floor of Kansas City Public Library’s downtown location (14 West 10th Street, Kansas City, Missouri, USA.) KCPL is a fully accessible building, and we are available to help accommodate any specific needs you may have.</p>
 
-        <p>We’ll begin at 9 AM on the morning of Thursday May 17th, and end around lunchtime on Friday the 18th. For those who can make it, we’ll be hosting a dinner on Wednesday evening as well.</p>
+        <p>We’ll begin at <span class="bold orange">9 AM on the morning of Thursday May 17th</span>, and end around lunchtime on Friday the 18th. For those who can make it, we’ll be hosting a dinner on Wednesday evening as well.</p>
 
         <div class="itinerary">
           <div class="col-md-4">
@@ -182,8 +184,8 @@
         <h2>Registration</h2>
         <p>If you would like to attend, we would love to have you. Our only expectation is that those who attend will be able to actively contribute their experience and have an interest in the development of learning circles and P2PU.</p>
         <p>There is no big registration process necessary and no registration fee. The only costs you incur are travel to Kansas City, lodging, and dinner on Wednesday night should you want to attend. (We’ll take care of breakfast and lunch on Thursday for everybody).</p>
-        <div>
-          <a href="https://docs.google.com/forms/d/1x9sNdY2mTbH9gsw252ZzSmpeInTb1YzyLNtYK0SRLU4/edit" class="p2pu-btn btn orange">Register</a>
+        <div class="cta">
+          <a href="https://goo.gl/forms/UTowylj4y8wVhJup1" class="p2pu-btn btn orange">Join us</a>
         </div>
       </div>
     </section>
