remove join us from top nav

--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
           <a class="nav-item nav-link minicaps data-scroll" href="#lodging">Lodging</a>
           <a class="nav-item nav-link minicaps data-scroll" href="#getting-there">Getting there</a>
           <a class="nav-item nav-link minicaps data-scroll" href="#guest-list">Guest List</a>
-          <a class="nav-item nav-link minicaps data-scroll" href="#registration">Registration</a>
           <a class="nav-item nav-link minicaps data-scroll" href="#faq">FAQ</a>
-          <a class="nav-item p2pu-btn orange data-scroll" href="https://goo.gl/forms/UTowylj4y8wVhJup1">JOIN US</a>
+          <a class="nav-item p2pu-btn orange data-scroll" href="#registration">Register</a>
         </ul>
       </div>
     </nav>
