--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
               <h3>I’ve never run or supported a learning circle or P2PU before, can I still come?</h3>
             </div>
             <div class="answer">
-              <p>Maybe. This is private event, but we’re open to those who are truly interested our collective work. Send Nico a message and let us know why you’re interested on coming (nico@p2pu.org)</p>
+              <p>Maybe. This is private event, but we’re open to those who are truly interested in our collective work. Send Nico a message and let us know why you’re interested in coming (nico@p2pu.org).</p>
             </div>
           </div>
 
@@ -209,7 +209,7 @@
               <h3>Is there any way P2PU can help pay for me or my colleague come?</h3>
             </div>
             <div class="answer">
-              <p>Don’t bet on it. We’ll looking into sponsors, but as of right now, there is no additional funding to help get you to Kansas City.</p>
+              <p>Don’t bet on it. We’re looking into sponsors, but as of right now, there is no additional funding to help get you to Kansas City.</p>
             </div>
           </div>
 
